@@ -6,6 +6,9 @@ public class BoardDto {
     private Long id;
     private String name;
     private List<Long> statusCodes;
+    private List<Long> tasks;
+    private List<Long> userIds;
+    private Long ownerId;
 
     public BoardDto(String name) {
         this.name = name;
@@ -16,7 +19,7 @@ public class BoardDto {
 
     @Override
     public String toString() {
-        return String.format("Board[name='%s']", name);
+        return "Board[name='%s']".formatted(name);
     }
 
     public Long getId() {
@@ -41,5 +44,29 @@ public class BoardDto {
 
     public void setStatusCodes(List<Long> statusCodes) {
         this.statusCodes = statusCodes;
+    }
+
+    public List<Long> getTasks() {
+        return this.tasks;
+    }
+
+    public void setTasks(List<Long> tasks) {
+        this.tasks = tasks;
+    }
+
+    public List<Long> getUserIds() {
+        return this.userIds;
+    }
+
+    public void setUserIds(List<Long> userIds) {
+        this.userIds = userIds;
+    }
+
+    public Long getOwnerId() {
+        return this.ownerId;
+    }
+
+    public void setOwnerId(Long ownerId) {
+        this.ownerId = ownerId;
     }
 }
