@@ -1,11 +1,17 @@
 package com.example.kanbantaskmanager.models;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 
@@ -19,11 +25,18 @@ public class Board {
 
     private String name;
 
-    @OneToMany(mappedBy = "board")
+    @ManyToOne
+    @JoinColumn(name = "owner_id")
+    private User owner;
+
+    @OneToMany(mappedBy = "board", cascade = CascadeType.ALL)
     private List<Status> statusCodes;
 
     @OneToMany(mappedBy = "board")
     private List<Task> tasks;
+
+    @ManyToMany(mappedBy = "boards")
+    private Set<User> users = new HashSet<>();
 
     public Board(String name) {
         this.name = name;
@@ -34,7 +47,7 @@ public class Board {
 
     @Override
     public String toString() {
-        return String.format("Board[id=%d, name='%s']", id, name);
+        return "Board[id=%d, name='%s']".formatted(id, name);
     }
 
     public Long getId() {
@@ -67,6 +80,22 @@ public class Board {
 
     public void setTasks(List<Task> tasks) {
         this.tasks = tasks;
+    }
+
+    public Set<User> getUsers() {
+        return users;
+    }
+
+    public void setUsers(Set<User> users) {
+        this.users = users;
+    }
+
+    public User getOwner() {
+        return owner;
+    }
+
+    public void setOwner(User owner) {
+        this.owner = owner;
     }
 
 }
